syntax = "proto3";

option java_package = "in.xnnyygn.xraft.kvstore";
option java_outer_classname = "Protos";

message Redirect {
    string leader_id = 1;
}

message Success {}

message Failure {
    int32 error_code = 1;
    string message = 2;
}

message SetCommand {
    string request_id = 1;
    string key = 2;
    bytes value = 3;
}

message GetCommand {
    string key = 1;
}

message GetCommandResponse {
    bool found = 1;
    bytes value = 2;
}

message EntryList {
    message Entry {
        string key = 1;
        bytes value = 2;
    }
    repeated Entry entries = 1;
}

message AddNodeCommand {
    string node_id = 1;
    string host = 2;
    int32 port = 3;
}

message RemoveNodeCommand {
    string node_id = 1;
}